# A-Rover-based-on-Raspberry-pico-WH

./: BLE_ctrl_V1_4_mac.py  CMakeLists.txt  CMakelists.txt  README.md  config.h  dhcpserver.c  dhcpserver.h  failsafe.h  lwipopts.h  main.cpp  test_controller.py  test_controller_win.py
BLEVer/: CMakeLists.txt
BLEVer/src/: ble_server.cpp  ble_server.h  btstack_config.h  config.h  failsafe.cpp  main.cpp  motor_control.cpp  motor_control.h  protocol.cpp  protocol.h  rover.gatt
ROVER_CTRL_INDOORT_SYX/: BLE_ctrl_V1_2.py  BLE_ctrl_V1_3.py  BLE_ctrl_V1_4.py  TCP_controller.py
ROVER_CTRL_INDOORT_SYX/indoortrial_UF2/: pico_BLE_rover.uf2  pico_TCP_rover.uf2  pico_UDP_rover.uf2
TCPVer/: CMakeLists.txt  pico_sdk_import.cmake
TCPVer/src/: config.h  failsafe.cpp  failsafe.h  lwipopts.h  main.cpp  motor_control.cpp  motor_control.h  protocol.cpp  protocol.h  stream_parser.cpp  stream_parser.h  tcp_server.cpp  tcp_server.h
UDP/: CMakeLists.txt  config.h  failsafe.cpp  failsafe.h  lwipopts.h  test_controller_win.py
